--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,71 +1,69 @@
-/* ============================================= */
-/*              Grid System                      */
-/* ============================================= */
+// ====== Grid System
 
 .container {
-  padding: 0 10px;
+  padding: 0 $base-spacing;
 }
 
 .row {
   display: flex;
   flex-direction: column;
-  padding: 1em 10px;
+  padding: 1em $base-spacing;
 }
 
 [class^=col] {
-  margin-top: 10px;
+  margin-top: $base-spacing;
   flex-basis: 100%;
-  min-height: 25px;
-  padding: 10px;
-  border-radius: 5px;
+  min-height: calc($base-spacing * 2.5);
+  padding: $base-spacing;
+  border-radius: $border-radius;
 }
 
 .theme.col-1 {
-  background-color: #927bc1;
+  background-color: $blue-purple;
 }
 
 .theme.col-2 {
-  background-color: #fd7856;
+  background-color: $coral;
 }
 
 .theme.col-3 {
-  background-color: #deb2ee;
+  background-color: $pastel-indigo;
 }
 
 .theme.col-4 {
-  background-color: #7ee6fd;
+  background-color: $greenish-cyan;
 }
 
 .theme.col-5 {
-  background-color: #88d9a0;
+  background-color: $turquoise;
 }
 
 .theme.col-6 {
-  background-color: #4da2bb;
+  background-color: $blue-green-shade;
 }
 
 .theme.col-7 {
-  background-color: #ec9fa3;
+  background-color: $pastel-red;
 }
 
 .theme.col-8 {
-  background-color: #fd9f85;
+  background-color: $peach;
 }
 
 .theme.col-9 {
-  background-color: #e4757a;
+  background-color: $candy-pink;
 }
 
 .theme.col-10 {
-  background-color: #63cc82;
+  background-color: $green-teal;
 }
 
 .theme.col-11 {
-  background-color: #51ddfc;
+  background-color: $color-primary;
 }
 
 .theme.col-12 {
-  background-color: #80e8d1;
+  background-color: $light-teal ;
 }
 
 .card {
