--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,6 +1,4 @@
-/* ============================================= */
-/*              Forms                            */
-/* ============================================= */
+// ==== FORMS
 
 .form {
   flex-basis: 100%;
@@ -9,10 +7,10 @@
 .input{
   display: block;
   width: 94%;
-  margin: 10px auto 0;
+  margin: $base-spacing auto 0;
   border: none;
-  padding: 10px;
-  border-bottom: 5px solid #58e1c1;
+  padding: $base-spacing;
+  border-bottom: $border-width-thick solid $accent-color;
 }
 
 .hidden {
