--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,12 +1,10 @@
-/* ============================================= */
-/*              Images                           */
-/* ============================================= */
+//===== IMAGES
 
 .img-avatar {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
+  margin-top: $base-spacing;
   max-width: 100%;
   max-height: 100%;
 }
@@ -15,10 +13,10 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
+  margin-top: $base-spacing;
   max-width: 100%;
-  padding: 13px;
-  border: 1px solid #ccc;
+  padding: calc($base-spacing * 1.3);
+  border: $border-width-thin solid #ccc;
 }
 
 .img-logo {
