--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -15,7 +15,25 @@
 }
 
 .row {
+  display: flex;
   flex-direction: row;
+}
+
+header.row {
+  align-items: center;
+  // ==== To force the Nav items to display on the left side
+    .col-9 {
+      justify-content: flex-end;
+    }
+    .nav {
+      width: 100%;
+      flex-direction: row;
+      justify-content: flex-end; /* Ensures links push to the far right */
+      align-items: center;
+      &-link {
+        flex-basis: 100px;
+      }
+   }
 }
 
 [class^=col] {
@@ -62,7 +80,7 @@
 }
 
 .col-9 {
-  flex-basis: 75.00%
+  flex-basis: 75.00%;
 }
 
 .col-10 {
@@ -77,18 +95,8 @@
   flex-basis: 100%;
 }
 
-.nav {
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.nav-link {
-  flex-basis: 100px;
-}
-
 .btn {
-  padding: $base-spacing 30px;
+  padding: $base-spacing auto;
 }
 
 .btn + .btn {
